Fixed a bug in css files. upgrade the login logic.
Signed-off-by: Jiecheng Xu <xjcpdp1995@gmail.com>

--- a/profile.css
+++ b/profile.css
@@ -12,6 +12,8 @@
 			font-weight: bold;
 		}
 		.side-l{
+			position: relative;
+			z-index: 10;
 			background-color: #9d03fc; /* Green */
 			width: 80%;
 			border: none;
