--- a/css/homepage.css
+++ b/css/homepage.css
@@ -11,6 +11,9 @@
 			font-size: 16px;
 			font-weight: bold;
 		}
+		body{
+			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+		}
 		.side-l{
 			background-color: #9d03fc; /* purple */
 			width: 80%;
